# nomad

./: pyproject.toml  pyproject_original.toml
nomad/nomad_versa/: nomad.py
nomad_versa/: __main__.py  nomad.py
nomad_versa/nomad_versa/: __init__.py  __main__.py
