# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["data*", "pt-models*", ".vscode*", "se-models*", "results-csv*"]

[project]
name = "nomad_versa"
version = "0.0.9"
description = "Perceptual similarity embeddings for non-matching reference audio quality assessment and speech enhancement"
readme = "README.md"
authors = [
    { name = "Alessandro Ragano", email = "alessandroragano@gmail.com" },
]
license = { file = "LICENSE" }
 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Speech quality", 
      "Speech enhancement", 
      "Audio quality",]

dependencies = [ "fairseq",
                "click>=8.1.3"]

requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/alessandroragano/nomad"
